[package]
name = "torrent-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_bytes = "0.11.7"
tokio = { version = "1.21.2", features = ["full"] }